--- a/내용정리.md
+++ b/내용정리.md
@@ -16,7 +16,7 @@ ex) "scripts": {
 
 # 3.0 정리
 
-`express`는 서버를 만들어 준다. listen를 사용하여 서버가 특정 채널에 소통 하도록 한다.
+`express`는 서버를 만들어 준다. 이걸 app 에 대입 시켜 줬으니 app 은 이제 서버이다. app.listen를 사용하여 서버가 특정 채널에 소통 하도록 한다.
 
 # 3.2 정리
 
@@ -725,3 +725,20 @@ npm i express-flash
 
 flash의 장정은 한번쓰면 캐쉬에서 바로 삭제가 된다는 것이다.
 메세지를 출력하고 5초뒤에 사라지게 만듬.
+
+# 16.0 앞으로의 계획
+
+졸업작품 댓글창 만들기. 이 섹션이 지나면 만든 것을 deploy(배치한다.) 한다. 실제 서버에 올린다는 의미. 그리고 몇가지 수정할 계획. ex) 실제 DB를 가져야 한다든지, assets는 서버에 저장해선 안된다. model부터 만들 예정이다. 모든 건 데이터부터 시작하니까!
+
+# 16.1 댓글을 추가해 주기
+
+이번 세션은 이때 까지 한 것에 대한 것이다.
+댓글이 언제 작성되었는지: createdAt
+댓글에 작성자가 있어야 하니까 owner
+댓글은 비디오에 속해 있으니까 video 추가
+
+video에 여러 댓글들이 달릴 테니까 비디오 모델에서 댓글을 추가해 준다.
+
+사용자가 댓글을 달 수 있다면, 사용자는 많은 댓글을 가질 수 있다는 것이다.
+그러므로 사용자 모델에도 댓글을 추가한다.
+(댓글은 array 형태이다.)
