# 16.3 error 해결 몇 다시 error

--- a/내용정리.md
+++ b/내용정리.md
@@ -751,3 +751,16 @@ commentSection에서 클릭에 텍스트가 인식하게 한다.
 리스널을 만들면 함수에 자동으로 event를 넘겨 주는데
 비디오 ID를 쓴다.
 로그인 하면 댓글쓰게 . 여기서 오류 다음시간에
+
+# 16.3 error 해결 몇 다시 error
+
+에러의 문제점은 있지도 않은데(null) 있다고 가정해서 생긴 문제이다.
+commentSection을 loggedIn상태 이후 스크릿트 되게 하여 해결
+혹은(다른 방법)
+textarea를 함수에 집어 넣음 (여전히 에러: 존재하지 않는 것에는 addEventListener을 사용 할 수 없음.)
+if (form)을 활용. 문제 해결
+fetch하면 apiRouter에서 createComment를 실행시키게 만듬.
+여기서 함수의 req.body가 작동 안함. 이걸 다음시간에
+설정 변경
+설정에서 Detect Indentation 체크 해제
+-> pug등에서 들여쓰기가 2개씩만 되던거 4개가 됨.
