# 16.4 댓글이 서버에 전달 완료

--- a/내용정리.md
+++ b/내용정리.md
@@ -764,3 +764,19 @@ fetch하면 apiRouter에서 createComment를 실행시키게 만듬.
 설정 변경
 설정에서 Detect Indentation 체크 해제
 -> pug등에서 들여쓰기가 2개씩만 되던거 4개가 됨.
+
+# 16.4 댓글이 서버에 전달 완료
+
+error의 이유는 우리가 서버가 이해할 만한 것을을 보내고 있지 않기 떄문이다.
+post request 보내지만, object를 보내지 않는것.
+server에 text를 서버가 이해 할 수 있게 해 준다.
+하지만 별점이나 다른 것도 보낼 수 있으니까 오브젝트 형태로 만들어 주고, JSON.stringify를 사용하여 string으로 돌려준다.
+.text , .reating 하면 undefined 가 나온다. 왜냐? JS object가 아니니까(req.params가 JS object이다. )
+문제는 server의 express.text이다. 이걸 express.json으로 바꾸어 줘야 한다.
+그리고 JSON.stringify 는 이상하고
+JSON.parse를 사용해야 한다. 이걸 express.json 이 한다?
+여전히 undefined
+req.body는 {} 비어 있다.
+이걸 해결하려면 express에게 json을 보내고 있다고 이야기해저야 한다.
+commentSectionn에서 headers 추가 여기는 request에 대한 정보가 있다. 이걸 채워주면.
+이제 된다!!!
