# 16.5 댓글이 서버에 전달 완료(2)

--- a/내용정리.md
+++ b/내용정리.md
@@ -780,3 +780,36 @@ req.body는 {} 비어 있다.
 이걸 해결하려면 express에게 json을 보내고 있다고 이야기해저야 한다.
 commentSectionn에서 headers 추가 여기는 request에 대한 정보가 있다. 이걸 채워주면.
 이제 된다!!!
+
+# 16.5 댓글이 서버에 전달 완료(2)
+
+backend로 보내는 모든 reuest는 쿠키와 함께 온다! 기억
+그럼 backend는 쿠키로 무엇을 하는 걸까???
+-> 쿠키를 내면 세션을 찾아본다.(우리는 사용자를 세션에 추가했다.)
+그러니까 fetch를 하면 브라우저 작동 원리에 의해 쿠키 자동 브라우저에 의해 backend에 전송되고, 그 말은 videoController에서 우리가 쓸 수 있는 뭔가가 있다는 것이다.
+우리에게 console.log(req.session.user);가 있다. 확인해 보자!
+{
+Comments: [],
+\_id: '62b1906b69b3acaf53adbded',
+email: 'dlrkehrud@naver.com',
+socialOnly: false,
+username: 'sungIn95',
+password: '$2b$05$QzREHxQVJgPMIDEB/8gFWuzSyGdBpGC7W9Xv/GAOVdjqfZNsxQsSG',
+name: '이성인',
+location: '경기도 냠양주시',
+videos: [
+'62b1908b69b3acaf53adbdf1',
+'62c3ebf2d9b3b42d35612ca5',
+'62c3ef73d9b3b42d35612caf',
+'62c40a90d03be5309968fe09'
+],
+\_\_v: 4,
+avatarUrl: 'uploads/avatars/b28f585066de306c40f695272b7b8be9'
+}
+이렇게 생겼다. 이제 댓글을 위한 모든게 준비 되어있다.
+commentSection textarea.value = "";를 추가하여 geter이자 seter로 만들었다.(값을 받을 수 있고, 지정할 수 있고)
+오해 할 수 있어 미리 말하면, text를 let으로 하는 방법을 물을 수 있지만, text는 textarea.value의 본사본이다. text를 바꾼다고 저 원본이 변하지는 않는다.
+이제 댓글을 못달면 404 성공하면 201을 만들어 주고
+POST 201을 확인하고
+mongodb를 확인해 보면 댓글이 성공적으로 보내졌음을 알수 있다.
+다음시간 pug에 댓글 보이기랑 실시간 댓글 달리는 기능 만듬.
