오류해결 server문제

--- a/내용정리.md
+++ b/내용정리.md
@@ -825,3 +825,5 @@ push를 추가해 준다. 그리고 save해 준다.
 Confused when to use "\_id" and "id"
 @dalin08266 \_id is created by Mongo, the one coming from the DB.
 'id' is what HTML element have.
+
+나는 comments가 안떠서 한시간 가까이 고생하다. 강사님과 내것이 새로고침 했을때, GET이 나오는 갯수가 다르다는 것을 알았다. 무엇이 다른가 계속 확인해 본 결과 server의 내용을 업데이트를 안해줬다. 이제는 정상 작동하는데. 중간에 이건가 하고 바꾸어 놓은게 있는데. 이상이 없기를 바란다.
