# 16.6 실시간 댓글.

--- a/내용정리.md
+++ b/내용정리.md
@@ -814,7 +814,7 @@ POST 201을 확인하고
 mongodb를 확인해 보면 댓글이 성공적으로 보내졌음을 알수 있다.
 다음시간 pug에 댓글 보이기랑 실시간 댓글 달리는 기능 만듬.
 
-# 16.6
+# 16.6 실시간 댓글.
 
 await().populate("comments")를 추가한다.
 여전히 video를 보면 comments가 비어 있다.
@@ -826,4 +826,9 @@ Confused when to use "\_id" and "id"
 @dalin08266 \_id is created by Mongo, the one coming from the DB.
 'id' is what HTML element have.
 
-나는 comments가 안떠서 한시간 가까이 고생하다. 강사님과 내것이 새로고침 했을때, GET이 나오는 갯수가 다르다는 것을 알았다. 무엇이 다른가 계속 확인해 본 결과 server의 내용을 업데이트를 안해줬다. 이제는 정상 작동하는데. 중간에 이건가 하고 바꾸어 놓은게 있는데. 이상이 없기를 바란다.
+error: 나는 comments가 안떠서 한시간 가까이 고생하다. 강사님과 내것이 새로고침 했을때, GET이 나오는 갯수가 다르다는 것을 알았다. 무엇이 다른가 계속 확인해 본 결과 server의 내용을 업데이트를 안해줬다. 이제는 정상 작동하는데. 중간에 이건가 하고 바꾸어 놓은게 있는데. 이상이 없기를 바란다.
+
+이제 pug에 댓글이 보이도록 해 주고. 최신것을 먼저 보고 싶으니까 reverse를 사용해 주자!
+watch를 꾸며주고
+window.location.reload();를 사용하여 실시간처럼 보여주자.
+문제는 댓글을 업로드 할 때마다 페이지가 새로고침 된다.(서버에도 부화가 많이 간다. )
