# 16.8 댓글 삭제(만들수 있게 도와주심)

--- a/내용정리.md
+++ b/내용정리.md
@@ -843,3 +843,11 @@ addComment 댓글에 댓글
 prepend이걸 추가?(이게 순서 문제 해결.)
 appendChild <--> prepend
 만약 댓글을 지우고 싶다면?(나의 도전 과제)다음시간에
+
+# 16.8 댓글 삭제(만들수 있게 도와주심)
+
+코드 챌린지 댓글 삭제 기능 만들기!!!
+나는 패스!!! 다시 복습하고 돌아오면 해 볼께!!!
+댓글이 ID를 갖게 하고 그러면 onclick event로 댓글을 삭제할 수 있다.
+댓글 X갖게 만들어 주고
+댓글 ID 갖고 오기
