--- a/내용정리.md
+++ b/내용정리.md
@@ -851,3 +851,10 @@ appendChild <--> prepend
 댓글이 ID를 갖게 하고 그러면 onclick event로 댓글을 삭제할 수 있다.
 댓글 X갖게 만들어 주고
 댓글 ID 갖고 오기
+
+# 17.0
+
+오늘 할것: 백엔드를 실제 서버로 배포
+bael CLI를 사용
+npm install --save-dev @babel/core @babel/cli
+npm run build:server
