--- a/내용정리.md
+++ b/내용정리.md
@@ -858,3 +858,8 @@ appendChild <--> prepend
 bael CLI를 사용
 npm install --save-dev @babel/core @babel/cli
 npm run build:server
+
+# 17.1 저번에 에러가 있었는데. 사라졌다.
+
+babel이 우리 서버에서 시작하는 것이 아니라 node가 우리 서버에서 실현되고 있다.
+babel의 도움이 필요 없다. 왜냐면 noge.js가 이 코드를 모두 이해한다는 것이다.
