--- a/내용정리.md
+++ b/내용정리.md
@@ -863,3 +863,9 @@ npm run build:server
 
 babel이 우리 서버에서 시작하는 것이 아니라 node가 우리 서버에서 실현되고 있다.
 babel의 도움이 필요 없다. 왜냐면 noge.js가 이 코드를 모두 이해한다는 것이다.
+
+# 17.2
+
+webpack mode: "development", watch: true, 대신
+--mode=development -w 를 명령어로 실행하게 함.
+그리고 build 으로 둘다 실행 시킴
